Curves invisible in object mode #59608

Closed
opened 2018-12-19 09:26:27 +01:00 by Jurek · 34 comments

System Information
win 10 64bit
Nvidia GeForce GTX 1060 6GB

Blender Version
Broken:
blender-2.80.0-git.fd42fe66161-windows64
Worked: (optional)

Short description of error

All types of Curves are invisible in viewport object mode.
Overlays options doesn't help

curves bug.blend

Exact steps for others to reproduce the error

  1. Open attached blend file.
  2. See the empty viewport
  3. press Tab to see that Curves are there in the edit mode.

or just Add any type of curve to a new blender file

**System Information** win 10 64bit Nvidia GeForce GTX 1060 6GB **Blender Version** Broken: blender-2.80.0-git.fd42fe66161-windows64 Worked: (optional) **Short description of error** All types of Curves are invisible in viewport object mode. Overlays options doesn't help [curves bug.blend](https://archive.blender.org/developer/F6003777/curves_bug.blend) **Exact steps for others to reproduce the error** 1. Open attached blend file. 2. See the empty viewport 3. press Tab to see that Curves are there in the edit mode. or just Add any type of curve to a new blender file
Author

Added subscriber: @solartistic

Added subscriber: @solartistic

#59728 was marked as duplicate of this issue

#59728 was marked as duplicate of this issue

#59724 was marked as duplicate of this issue

#59724 was marked as duplicate of this issue

#59717 was marked as duplicate of this issue

#59717 was marked as duplicate of this issue

#59715 was marked as duplicate of this issue

#59715 was marked as duplicate of this issue

#59698 was marked as duplicate of this issue

#59698 was marked as duplicate of this issue

#59683 was marked as duplicate of this issue

#59683 was marked as duplicate of this issue

#59678 was marked as duplicate of this issue

#59678 was marked as duplicate of this issue

#59676 was marked as duplicate of this issue

#59676 was marked as duplicate of this issue

#59666 was marked as duplicate of this issue

#59666 was marked as duplicate of this issue

#59667 was marked as duplicate of this issue

#59667 was marked as duplicate of this issue

#59659 was marked as duplicate of this issue

#59659 was marked as duplicate of this issue

studio/blender-studio#59619 was marked as duplicate of this issue

studio/blender-studio#59619 was marked as duplicate of this issue
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2018-12-19 09:43:55 +01:00
Member

We had the case of NURBS not drawing in object mode (see #58298, f371e633f9).
That was fixed, but indeed it seems now NURBS are drawing, but Curves are not...

@fclem: mind checking again?

We had the case of NURBS not drawing in object mode (see #58298, f371e633f9). That was fixed, but indeed it seems now NURBS are drawing, but Curves are not... @fclem: mind checking again?
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

Added subscriber: @zazizizou

Added subscriber: @zazizizou
Member

Lattices are also invisible in object mode.

Lattices are also invisible in object mode.
Member

Added subscriber: @Kovalex

Added subscriber: @Kovalex
Member

Added subscribers: @paolo5palmi, @HamzaSaidj

Added subscribers: @paolo5palmi, @HamzaSaidj
Member

Added subscriber: @Jaye.Antoni_Whyldz

Added subscriber: @Jaye.Antoni_Whyldz
Member

Added subscriber: @MuiscAMG

Added subscriber: @MuiscAMG
Member

Added subscribers: @WilliamReynish, @Czteryk, @antoniov

Added subscribers: @WilliamReynish, @Czteryk, @antoniov
Member

Removed subscriber: @zazizizou

Removed subscriber: @zazizizou

Added subscribers: @JayBee27, @EricButts, @Rickyx, @rboxman

Added subscribers: @JayBee27, @EricButts, @Rickyx, @rboxman

Added subscriber: @KQ

Added subscriber: @KQ

Added subscriber: @comvico

Added subscriber: @comvico

This issue was referenced by a2a2fe1f22

This issue was referenced by a2a2fe1f22e2cc64a35e05ba605ac4d6e2360303

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @KuldeepSingh

Added subscriber: @KuldeepSingh

Added subscriber: @AviRozenboim

Added subscriber: @AviRozenboim
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

@JacquesLucke @fclem The bug seems to have reappeared.

@JacquesLucke @fclem The bug seems to have reappeared.

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59608
No description provided.