Fix T59608: Curves invisible in object mode